--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
     display: flex;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     background-color: hsl(var(--hue), 100%, 20%);
@@ -53,4 +53,33 @@ body.wrong {
     padding: 5px 10px;
     color: white;
     outline: none;
+}
+
+.btn:hover {
+    border-color: black;
+}
+
+.btn.correct {
+    --hue: var(--hue-correct);
+    color: black;
+}
+
+.btn.wrong {
+    --hue: var(--hue-wrong)
+}
+
+.start-btn, .next-btn {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
 }
