--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,24 @@
     --hue-correct: 145;
 }
 
+.center {
+    text-align: center
+}
+
 .header {
-    padding-top: 60px;
+    padding-top: 0px;
     justify-content: center;
     text-align: center;
-    text-decoration-color: blue;
+    position: fixed; top: 0;
 }
 
 
 body {
     --hue: var(--hue-neutral);
     padding: 0;
-    margin: 0;
+    margin: auto;
     display: flex;
-    width: 100vw;
+    width: 640px;
     height: 100vh;
     justify-content: center;
     align-items: center;
@@ -40,11 +44,12 @@ body.wrong {
 
 .container {
     width: 800px;
-    max-width: 80%;
+    max-width: 60%;
     background-color: white;
     border-radius: 5px;
-    padding: 10px;
+    padding: 1000px;
     box-shadow: 0 0 10px 2px;
+    position: fixed; 
 }
 
 .btn-grid {
